--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	</div>
     
     <audio autoplay>
-        <source src="flores.mp3/amarillas.mp3" type="audio/mpeg">
+        <source src="amarillas.mp3" type="audio/mpeg">
     </audio>
 
 	<script src="script.js"></script>
