--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
             doctora, no te des por vencida doc. Lindo día, te extraño.
         </p></center>
 		<div class="yellow-flowers">
-            <img src="https://e7.pngegg.com/pngimages/803/531/png-clipart-flower-delivery-flower-bouquet-floristry-lilium-flower-flower-arranging-color.png" alt="flores amarillas" width="200" height="150" position="center">
+            <img src="https://i.pinimg.com/736x/20/85/67/208567b4bbb8873d9298f6e15fbef87a.jpg" alt="flores amarillas" width="200" height="150" position="center">
         </div>
 		<p>De mi virtual presente, mis flores amarillas para ti, espero te haya ido bien.</p>
 	</div>
     
     <audio autoplay>
-        <source src="amarillas.mp3" type="audio/mpeg">
+        <source src="amarillas.mp3" type="audio autoplay/mp3">
     </audio>
 
 	<script src="script.js"></script>
