--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Página con fondo morado y sobre emergente</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
+<audio src="flores.mp3/amarillas.mp3" autoplay></audio>
 </head>
 <body>
 	<button id="open-envelope">Abrir sobre</button>
@@ -19,10 +20,6 @@
         </div>
 		<p>De mi virtual presente, mis flores amarillas para ti, espero te haya ido bien.</p>
 	</div>
-    
-    <audio autoplay>
-        <source src="amarillas.mp3" type="audio autoplay/mp3">
-    </audio>
 
 	<script src="script.js"></script>
 </body>
