--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Página con fondo morado y sobre emergente</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
-<audio src="flores.mp3/amarillas.mp3" autoplay></audio>
+<audio src="flores.mp3/amarillas.mp3" controls autoplay></audio>
 </head>
 <body>
 	<button id="open-envelope">Abrir sobre</button>
