--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+Fe<!DOCTYPE html>
 <html>
 <head>
 	<title>Página con fondo morado y sobre emergente</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
-<audio src="flores.mp3/amarillas.mp3" controls autoplay></audio>
+<audio src="flores.mp3/amarillas.mp3" autoplay controls></audio>
 </head>
 <body>
 	<button id="open-envelope">Abrir sobre</button>
