--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@ Fe<!DOCTYPE html>
 <head>
 	<title>Página con fondo morado y sobre emergente</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
-<audio src="flores.mp3/amarillas.mp3" autoplay controls></audio>
+<audio autoplay controla> 
+    <source src="flores.mp3/amarillas.mp3" type="audio/mpeg>
+</audio>
 </head>
 <body>
 	<button id="open-envelope">Abrir sobre</button>
