--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ Fe<!DOCTYPE html>
 <head>
 	<title>Página con fondo morado y sobre emergente</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
-<audio autoplay controla> 
+<audio autoplay controls> 
     <source src="flores.mp3/amarillas.mp3" type="audio/mpeg>
 </audio>
 </head>
