--- a/index.html
+++ b/index.html
@@ -2,25 +2,24 @@
 <html>
 <head>
 	<title>Página con fondo morado y sobre emergente</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
-<audio autoplay controls> 
-    <source src="flores.mp3/amarillas.mp3" type="audio/mpeg>
-</audio>
+	<link rel="stylesheet" type="text/css" href="estilo.css">
+	<audio controls autoplay>
+		<source src="flores.mp3/amarillas.mp3" type="audio/mpeg">
+	</audio>
 </head>
 <body>
-	<button id="open-envelope">Abrir sobre</button>
+	<button id="sobre-abrir">Abrir sobre</button>
 
-	<div class="envelope">
-		<button id="close-envelope">Cerrar</button>
+	<div class="sobre">
+		<button id="cerrar-sobre">Cerrar</button>
 		<p>Para Fer:</p>
-        <center><p>Quiza no puedo darte fisicamente las flores sin embargo este es mi segundo intento de una pagina, esta vez me es más facil, una vez que ya lo entiendo.
-            Pero no es el punto, espero el día de hoy te haya ido bien, sin embargo, sea cual sea el resultado yo estoy seguro y pienso que un día seras una increible
-            doctora, no te des por vencida doc. Lindo día, te extraño.
-        </p></center>
-		<div class="yellow-flowers">
-            <img src="https://i.pinimg.com/736x/20/85/67/208567b4bbb8873d9298f6e15fbef87a.jpg" alt="flores amarillas" width="200" height="150" position="center">
+        <center><p>Quiza no puedo darte fisicamente las flores sin embargo este es mi segundo intento de una pagina, esta vez me es mas facil, una vez que ya lo entiendo.
+            Pero no es el punto, espero el día de hoy te haya ido bien, sin embargo, sea cual sea el resultado yo estoy seguro y pienso que un día serás una increible
+            doctora, no te des por vencida doc. Lindo día, te extraño.</p></center>
+		<div class="flores-amarillas">
+            <img src="https://i.pinimg.com/736x/20/85/67/208567b4bbb8873d9298f6e15fbef87a.jpg" alt="flores amarillas" width="200" height="150" align="center">
         </div>
-		<p>De mi virtual presente, mis flores amarillas para ti, espero te haya ido bien.</p>
+		<p>De mi presente virtual, mis flores amarillas para ti, espero que haya ido bien.</p>
 	</div>
 
 	<script src="script.js"></script>
