--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Página con fondo morado y sobre emergente</title>
-	<link rel="stylesheet" type="text/css" href="estilo.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
 	<audio controls autoplay>
 		<source src="flores.mp3/amarillas.mp3" type="audio/mpeg">
 	</audio>
